Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3549

String gauge exposed in prometheus format

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.17.0
    • 1.18.0, 1.17.1
    • metrics
    • None

    Description

      According to KUDU-3375, "Kudu now exposes all its metrics except for string gauges in Prometheus format via the embedded webserver's `/metrics_prometheus` endpoint".

       

       

      However, with this commit (https://github.com/apache/kudu/commit/e65ea38a4860c007d93ada9c991bccec903a80b1) , string gauge related to clock_ntp_status is exposed.

       

      # HELP kudu_master_clock_ntp_status Output of ntp_adjtime()/ntp_gettime() kernel API call
      # TYPE kudu_master_clock_ntp_status gauge
      kudu_master_clock_ntp_status{unit_type="state"} now:1706665936956760 maxerror:70013 status:ok 

      It prevents prometheus operators from collecting prometheus metrics for kudu.

      Attachments

        Activity

          People

            aserbin Alexey Serbin
            eub YUBI LEE
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: