src/kudu/util/metrics.h
@@ -583,8 +583,9 @@ class MetricPrototype {
   void WriteFields(JsonWriter* writer,
                    const MetricJsonOptions& opts) const;
 
-  void WriteFields(PrometheusWriter* writer, const std::string& prefix) const;
-
+  // Write TYPE and HELP meta-info for a metric in Prometheus format.
+  virtual void WriteHelpAndType(PrometheusWriter* writer,
+                                const std::string& prefix) const;
  protected:
   explicit MetricPrototype(CtorArgs args);
   virtual ~MetricPrototype() = default;
@@ -1013,6 +1014,14 @@ class GaugePrototype : public MetricPrototype {
     return MetricType::kGauge;
   }
 
+  void WriteHelpAndType(PrometheusWriter* writer,
+                        const std::string& prefix) const override {
+    if constexpr (std::is_arithmetic_v<T>) {
+      // Non-arithmetic gauges aren't supported by Prometheus.
+      MetricPrototype::WriteHelpAndType(writer, prefix);
+    }
+  }
+
  private:
   DISALLOW_COPY_AND_ASSIGN(GaugePrototype);
 };
@@ -1048,11 +1057,10 @@ class StringGauge : public Gauge {
     return false;
   }
   void MergeFrom(const scoped_refptr<Metric>& other) override;
-
+  Status WriteAsPrometheus(PrometheusWriter* w, const std::string& prefix) const override;
  protected:
   FRIEND_TEST(MetricsTest, SimpleStringGaugeForMergeTest);
-  FRIEND_TEST(MetricsTest, StringGaugePrometheusTest);
-  Status WriteAsPrometheus(PrometheusWriter* w, const std::string& prefix) const override;
+  FRIEND_TEST(MetricsTest, StringGaugeForPrometheus);
   void WriteValue(JsonWriter* writer) const override;
   void WriteValue(PrometheusWriter* writer, const std::string& prefix) const override;
   void FillUniqueValuesUnlocked();
@@ -1091,6 +1099,30 @@ class MeanGauge : public Gauge {
   mutable simple_spinlock lock_;  // Guards total_sum_ and total_count_
   DISALLOW_COPY_AND_ASSIGN(MeanGauge);
 };
+
+// A helper function for writing a gauge's value in Prometheus format.
+template<typename T>
+void WriteValuePrometheus(PrometheusWriter* writer,
+                          const std::string& prefix,
+                          const char* proto_name,
+                          const char* unit_name,
+                          const T& value) {
+  static constexpr const char* const kFmt = "$0$1{unit_type=\"$2\"} $3\n";
+
+  if constexpr (!std::is_arithmetic_v<T>) {
+    // Non-arithmetic gauges aren't supported by Prometheus.
+    return;
+  }
+
+  // For a boolean gauge, convert false/true to 0/1 for Prometheus.
+  if constexpr (std::is_same_v<T, bool>) {
+    return writer->WriteEntry(
+        strings::Substitute(kFmt, prefix, proto_name, unit_name, value ? 1 : 0));
+  } else {
+    return writer->WriteEntry(
+        strings::Substitute(kFmt, prefix, proto_name, unit_name, value));
+  }
+}
 
 // Lock-free implementation for types that are convertible to/from int64_t.
 template <typename T>
@@ -1162,23 +1194,11 @@ class AtomicGauge : public Gauge {
   }
 
   void WriteValue(PrometheusWriter* writer,const std::string& prefix) const override {
-    std::string output = "";
-
-    // If Boolean Gauge, convert false/true to 0/1 for Prometheus
-    if constexpr (std::is_same_v<T, bool> ) {
-      int check = 0;
-      if (value() == true) {
-        check = 1;
-      } else {
-        check = 0;
-      }
-      output = strings::Substitute("$0$1{unit_type=\"$2\"} $3\n", prefix, prototype_->name(),
-                                   MetricUnit::Name(prototype_->unit()), check);
-    } else {
-      output = strings::Substitute("$0$1{unit_type=\"$2\"} $3\n", prefix, prototype_->name(),
-                                   MetricUnit::Name(prototype_->unit()), value());
-    }
-    writer->WriteEntry(output);
+    return WriteValuePrometheus(writer,
+                                prefix,
+                                prototype_->name(),
+                                MetricUnit::Name(prototype_->unit()),
+                                value());
   }
  private:
   AtomicInt<int64_t> value_;
@@ -1273,23 +1293,13 @@ class FunctionGauge : public Gauge {
   }
 
   void WriteValue(PrometheusWriter* writer, const std::string& prefix) const override {
-    std::string output = "";
-    // If Boolean Gauge, convert false/true to 0/1 for Prometheus
-    if constexpr (std::is_same_v<T, bool> ) {
-      int check = 0;
-      if (value() == true) {
-        check = 1;
-      } else {
-        check = 0;
-      }
-      output = strings::Substitute("$0$1{unit_type=\"$2\"} $3\n", prefix, prototype_->name(),
-                                   MetricUnit::Name(prototype_->unit()), check);
-    } else {
-      output = strings::Substitute("$0$1{unit_type=\"$2\"} $3\n", prefix, prototype_->name(),
-                                   MetricUnit::Name(prototype_->unit()), value());
-    }
-    writer->WriteEntry(output);
+    return WriteValuePrometheus(writer,
+                                prefix,
+                                prototype_->name(),
+                                MetricUnit::Name(prototype_->unit()),
+                                value());
   }
+
   // Reset this FunctionGauge to return a specific value.
   // This should be used during destruction. If you want a settable
   // Gauge, use a normal Gauge instead of a FunctionGauge.
